--- a/LottieSample/src/main/AndroidManifest.xml
+++ b/LottieSample/src/main/AndroidManifest.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.airbnb.lottie.samples">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".LottieApplication"
@@ -14,7 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:allowBackup">
+        <activity android:name=".othersdemo.ui.CustomViewPagerActivity"></activity>
+        <activity android:name=".othersdemo.ui.OthersDemoActivity" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -34,6 +32,9 @@
             android:windowSoftInputMode="stateVisible" />
         <activity
             android:name=".BullseyeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SVGADemoActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AppIntroActivity"
@@ -67,14 +68,21 @@
         <activity
             android:name=".FilmStripSnapshotActivity"
             android:exported="true" />
-
         <activity
             android:name=".SimpleAnimationActivity"
             android:exported="true" />
-
         <activity android:name=".SnapshotTestActivity" />
         <activity android:name=".EmptyActivity" />
-        <service android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService" android:enabled="true" />
+
+        <service
+            android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
+            android:enabled="true" />
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
